<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/settings_text"
        android:textColor="@color/menu_color"
        android:textSize="25sp" />

    <TableRow
        android:id="@+id/mainTableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_text"
            android:textColor="@color/menu_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/questionTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_type_text"
            android:textColor="@color/menu_color"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:id="@+id/mainTableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp" >

        <Spinner
            android:id="@+id/questionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/questionTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/mainTableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer_text"
            android:textColor="@color/menu_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answerTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer_type_text"
            android:textColor="@color/menu_color"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:id="@+id/mainTableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" >

        <Spinner
            android:id="@+id/answerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/answerTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

    </TableRow>

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/points_string"
        android:textColor="@color/menu_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="start"
        android:text="@string/start_text" />

</TableLayout> 